--- a/kubernetes/productcatalog/deploy.yaml
+++ b/kubernetes/productcatalog/deploy.yaml
@@ -31,7 +31,7 @@ spec:
       serviceAccountName: opentelemetry-demo
       containers:
         - name: productcatalogservice
-          image: abhishekf5/product-catalog:13134113508
+          image: ohadgu/product-catalog:17441698788
           imagePullPolicy: IfNotPresent
           ports:
             
